@@ -85,8 +85,6 @@ export("as.PlainTextDocument",
        "tm_intersect",
        "tm_map",
        "tm_reduce",
-       "tm_startCluster",
-       "tm_stopCluster",
        "tm_tag_score",
        "URISource",
        "VCorpus",
